test.txt
/home/amap/w_catkin_ws/src/opencv_line_detection/src/opencv_line_detect_image_topic.cpp:242:88: error: no match for ‘operator=’ (operand types are ‘ros::NodeHandle’ and ‘ros::Subscriber’)
 = nh.subscribe("/flag/car_avoid_steer_direction",1, &car_avoid_steer_directoin_Callback);
                                                                                        ^
In file included from /opt/ros/melodic/include/ros/ros.h:45:0,
                 from /home/amap/w_catkin_ws/src/opencv_line_detection/src/opencv_line_detect_image_topic.cpp:5:
/opt/ros/melodic/include/ros/node_handle.h:166:17: note: candidate: ros::NodeHandle& ros::NodeHandle::operator=(const ros::NodeHandle&)
     NodeHandle& operator=(const NodeHandle& rhs);
                 ^~~~~~~~
/opt/ros/melodic/include/ros/node_handle.h:166:17: note:   no known conversion for argument 1 from ‘ros::Subscriber’ to ‘const ros::NodeHandle&’
opencv_line_detection/CMakeFiles/line_detection_node.dir/build.make:62: recipe for target 'opencv_line_detection/CMakeFiles/line_detection_node.dir/src/opencv_line_detect_image_topic.cpp.o' failed
make[2]: *** [opencv_line_detection/CMakeFiles/line_detection_node.dir/src/opencv_line_detect_image_topic.cpp.o] Error 1
CMakeFiles/Makefile2:1437: recipe for target 'opencv_line_detection/CMakeFiles/line_detection_node.dir/all' failed
make[1]: *** [opencv_line_detection/CMakeFiles/line_detection_node.dir/all] Error 2
Makefile:140: recipe for target 'all' failed
make: *** [all] Error 2
Invoking "make -j4 -l4" failed
